Fix gang squish

--- a/www/style.scss
+++ b/www/style.scss
@@ -32,14 +32,15 @@ body {
     bottom: 0;
 
     width: auto;
+    max-width: none;
     height: 100%;
 
+    object-fit: contain;
     overflow: hidden;
     user-select: none;
 
     opacity: 0.25;
     mix-blend-mode: overlay;
-
     z-index: -10;
 }
 
